--- a/configure.in
+++ b/configure.in
@@ -16,6 +16,7 @@ alpha-dec-osf*) : ${CC=cc};
 sparc-sun-solaris2*) : ${CC=cc};;
 esac
 
+MAKE_DYNLIB_SIMLINKS=""
 
 if test "$NOF77"
 then
@@ -537,6 +538,7 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        HUP_TO_INETD="killall -HUP inetd";
        dnl HDF5_LIBS="-lz -lsz";
        dnl HDF5_DIR="/usr/local";
+       MAKE_DYNLIB_SYMLINKS="pushd $libdir; for l in *.so; do ln -sf \$\${l:0:\$\${#l}-3}.so \$\${l:0:\$\${#l}-3}.dynlib; done; popd"
        X_EXTRA_LIBS="-lXmu";;
 *apple-darwin*) echo "Configuring for MacOS X...";
        RTEVENTS=""
@@ -1043,6 +1045,7 @@ AC_SUBST(LINKMODULE)
 AC_SUBST(LOC)
 AC_SUBST(VAL)
 AC_SUBST(MAKEBINDIR)
+AC_SUBST(MAKE_DYNLIB_SYMLINKS)
 AC_SUBST(MAKELIBDIR)
 AC_SUBST(MAKESHLIBDIR)
 AC_SUBST(MAKESHLIBDIR_RULE)
