--- a/configure.in
+++ b/configure.in
@@ -538,7 +538,7 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        HUP_TO_INETD="killall -HUP inetd";
        dnl HDF5_LIBS="-lz -lsz";
        dnl HDF5_DIR="/usr/local";
-       MAKE_DYNLIB_SYMLINKS="pushd $libdir; for l in *.so; do ln -sf \$\${l:0:\$\${#l}-3}.so \$\${l:0:\$\${#l}-3}.dynlib; done; popd"
+       MAKE_DYNLIB_SYMLINKS="pushd $libdir; for l in *.so; do ln -sf \$\${l:0:\$\${#l}-3}.so \$\${l:0:\$\${#l}-3}.dylib; done; popd"
        X_EXTRA_LIBS="-lXmu";;
 *apple-darwin*) echo "Configuring for MacOS X...";
        RTEVENTS=""
