--- a/macosx/Makefile.in
+++ b/macosx/Makefile.in
@@ -17,3 +17,4 @@ clean :
 
 install:
 	$(INSTALL) -m 755  mdsip.plist $(exec_prefix)/etc
+	pushd @libdir@; for l in *.so; do ln -sf \$\${l:0:\$\${#l}-3}.so \$\${l:0:\$\${#l}-3}.dylib; done; popd
