--- a/macosx/Makefile.in
+++ b/macosx/Makefile.in
@@ -16,6 +16,11 @@ clean :
 	:
 
 install:
+        mkdir $(exec_prefix)/scripts
 	$(INSTALL) -m 755  mdsip.plist $(exec_prefix)/etc
 	$(INSTALL) -m 755  mdsplus_launchconfig @bindir@
+        $(INSTALL) -m 755  scripts/preupgrade $(exec_prefix)/scripts
+        $(INSTALL) -m 755  scripts/postinstall $(exec_prefix)/scripts
+        $(INSTALL) -m 755  scripts/postupgrade $(exec_prefix)/scripts
 	pushd @libdir@; for l in *.so; do ln -sf $${l:0:$${#l}-3}.so $${l:0:$${#l}-3}.dylib; done; popd
+        sudo /usr/bin/mdsplus_chown -R root:wheel $(exec_prefix)
