--- a/macosx/Makefile.in
+++ b/macosx/Makefile.in
@@ -19,7 +19,6 @@ install:
 	mkdir -p $(exec_prefix)/scripts
 	$(INSTALL) -m 755  mdsip.plist $(exec_prefix)/etc
 	$(INSTALL) -m 755  mdsplus_launchconfig @bindir@
-	$(INSTALL) -m 755  scripts/preupgrade $(exec_prefix)/scripts
+	$(INSTALL) -m 755  scripts/preinstall $(exec_prefix)/scripts
 	$(INSTALL) -m 755  scripts/postinstall $(exec_prefix)/scripts
-	$(INSTALL) -m 755  scripts/postupgrade $(exec_prefix)/scripts
 	pushd @libdir@; for l in *.so; do ln -sf $${l:0:$${#l}-3}.so $${l:0:$${#l}-3}.dylib; done; popd
