--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -126,6 +126,7 @@ MARTESetup.java\
 MARTE_MHD_BRSetup.java\
 MARTE_MHD_CTRLSetup.java\
 MARTE_MHD_ISetup.java\
+MARTE_MHD_AC_BCSetup.java\
 MARTE_MHD_BTSetup.java\
 MARTE_DEQUSetup.java\
 LASER_YAGSetup.java\
