--- a/configure.in
+++ b/configure.in
@@ -30,12 +30,13 @@ AC_PROG_CC
 AC_PROG_CXX
 
 AC_ARG_ENABLE(mdsip_connections,
-        [ --enable-mdsip_connections     Use new improved mdsip connections],
+        [ --enable-mdsip_connections     Default. Use --enable-mdsip_connection=no to override.],
         if test "$enableval" = yes; then
           AC_DEFINE(MDSIP_CONNECTIONS)
 	  MDSIP_CONNECTIONS="yes";
         else 
-          MDSIP_CONNECTIONS="no";
+          MDSIP_CONNECTIONS="yes";
+          AC_DEFINE(MDSIP_CONNECTIONS)
         fi)
 
 AC_ARG_ENABLE(nodebug,
