--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -130,6 +130,7 @@ MARTE_MHD_ISetup.java\
 MARTE_MHD_AC_BCSetup.java\
 MARTE_MHD_BTSetup.java\
 MARTE_DEQUSetup.java\
+MARTE_EDA1Setup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
