Change .jnilib to .dylib

--- a/configure.in
+++ b/configure.in
@@ -523,7 +523,7 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        X_CFLAGS="-I/usr/OpenMotif/include"
        LINKJNI="$LINKSHARED";
        SHARETYPE=".dylib";
-       SHARETYPEJNI=".jnilib";
+       SHARETYPEJNI=".dylib";
        SHARETYPEMOD=".dylib";
        LIBPTHREAD="";
        TAR_EXCLUDE="--exclude";
@@ -572,7 +572,7 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        X_CFLAGS="-I/usr/OpenMotif/include";
        LINKJNI="$LINKSHARED";
        SHARETYPE=".dylib";
-       SHARETYPEJNI=".jnilib";
+       SHARETYPEJNI=".dylib";
        SHARETYPEMOD=".so";
        LIBPTHREAD="";
        TAR_EXCLUDE="--exclude";
