--- a/configure.in
+++ b/configure.in
@@ -502,7 +502,8 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
 		  VAL="F2C_VAL"
        elif (test "$F77" = "gfortran"); then
           FFLAGS="$FFLAGS -fno-range-check"
-          FORLD="$F77"
+          FORLD="gcc"
+          FOR_LDFLAGS="-shared -arch x86_64 -arch i386 -L/usr/local/gfortran/lib/gcc/x86_64-apple-darwin11/4.6.2/ -L/usr/local/gfortran/lib/gcc/x86_64-apple-darwin11/4.6.2/i386 -lgfortranbegin -L/usr/local/gfortran/lib -L/usr/local/gfortran/lib/i386 -lquadmath -lgfortran -lgcc"
           LOC="loc"
        fi;
        FEXECLIBDIR="-L";
