--- a/mdsobjects/labview/MDSobjectsLVShr.vcproj
+++ b/mdsobjects/labview/MDSobjectsLVShr.vcproj
@@ -65,7 +65,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(LABVIEW_DIR)\cintools\labviewv.lib"
+				AdditionalDependencies="&quot;$(LABVIEW_DIR)\cintools\labview.lib&quot;"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
 				IgnoreAllDefaultLibraries="false"
@@ -144,7 +144,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="&quot;$(LABVIEW_DIR)\cintools\labviewv.lib&quot;"
+				AdditionalDependencies="&quot;$(LABVIEW_DIR)\cintools\labview.lib&quot;"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
