Added MARTe waveform generator interface

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -131,6 +131,7 @@ MARTE_MHD_AC_BCSetup.java\
 MARTE_MHD_BTSetup.java\
 MARTE_DEQUSetup.java\
 MARTE_EDA1Setup.java\
+MARTE_WAVEGENSetup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
