Added SPIDER Breadkdown control device

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -132,6 +132,7 @@ MARTE_MHD_BTSetup.java\
 MARTE_DEQUSetup.java\
 MARTE_EDA1Setup.java\
 MARTE_WAVEGENSetup.java\
+MARTE_BREAKDOWNSetup.java\
 LASER_YAGSetup.java\
 SPIDER_SMSetup.java\
 SPIDERSetup.java\
