add optional labview stuff

--- a/configure.in
+++ b/configure.in
@@ -1121,8 +1121,8 @@ AC_SUBST(LINKJNI)
 AC_SUBST(LINKMODULE)
 AC_SUBST(LOC)
 AC_SUBST(LV)
-AC_SUBST(LVLIB)
-AC_SUBST(LVINCLUDE)
+AC_SUBST(LV_LIB)
+AC_SUBST(LV_INC)
 AC_SUBST(VAL)
 AC_SUBST(MACOSX)
 AC_SUBST(MAKEBINDIR)
